@@ -1,4 +1,5 @@
 ==2011-06==
+* Implemented connection of main inlets
 * Fixed connection order
 * Implemented OEEmulation addDocument
 * Skipped rev. 666
